# yfinance

./: .gitignore  .pylintrc  CHANGELOG.rst  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml  ruff.yml
app/: main.py
app/web/: README.md  app.py  index.html  package.json  tsconfig.json  vite.config.ts
doc/source/: conf.py  index.rst
sql/: yfinance.db
tests/: context.py  price_repair_cases.py  test_auth.py  test_calendars.py  test_http.py  test_live.py  test_options.py  test_prices.py  test_sql.py  test_subscription.py
tests/issues/: test.py  test_1029.py  test_1327.py  test_1333.py  test_1585.py  test_1713.py  test_1735.py  test_1737.py  test_1752.py  test_687.py  test_689.py  test_fast_info.py  test_history.py  test_mocked.py  test_mocked_download.py  test_mocked_earnings_dates.py  test_multi_symbol_download.py  test_single_symbol_sql.py  test_sql.py
yfinance/: __init__.py  base.py  base_lookup.py  cache.py  calendars.py  client.py  config.py  const.py  constants.py  data.py  lookup.py  options.py  search.py  ticker.py  tickers.py  utils.py  utils_doc.py  utils_financial.py  utils_tz.py
yfinance/auth/: __init__.py  cookie_store.py  manager.py  session.py  strategies.py
yfinance/domain/: __init__.py  domain.py  industry.py  market.py  sector.py
yfinance/fetchers/: __init__.py  _helpers.py  analyst_consensus.py  balance_sheet.py  company_profile.py  dividends.py  fast_info.py  growth.py  profitability.py  valuation.py
yfinance/http/: __init__.py  worker.py
yfinance/parsers/: __init__.py  analysis.py  fundamentals.py  funds.py  holders.py
yfinance/scrapers/: __init__.py  fundamentals.py  funds.py  holders.py  quote.py  utils.py
yfinance/screener/: __init__.py  client.py  query.py
yfinance/sql/: __init__.py  _db.py  _helpers.py  _table_runtime.py  analyst_consensus.py  client.py  growth.py  populate.py  yfinance.db
yfinance/subscription/: __init__.py  client.py  endpoints.py
yfinance/ws/: __init__.py  (+2 more)
(+31 files in other folders)
