[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yfinance"
dynamic = ["version"]
description = "Download market data from Yahoo! Finance API"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
  { name = "Ran Aroussi", email = "ran@aroussi.com" },
]
keywords = ["pandas", "yahoo finance", "pandas datareader"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Financial",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "pandas>=3.0.1",
  "numpy>=2.4.3",
  "requests>=2.32.5",
  "multitasking>=0.0.12",
  "platformdirs>=4.9.4",
  "pytz>=2026.1",
  "frozendict>=2.4.7",
  "beautifulsoup4>=4.14.3",
  "peewee>=4.0.2",
  "requests_cache>=1.3.1",
  "requests_ratelimiter>=0.9.2",
  "scipy>=1.17.1",
  "curl_cffi>=0.14.0",
  "protobuf>=7.34.0",
  "websockets>=16.0",
]

[project.optional-dependencies]
web = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
]

[project.urls]
Homepage = "https://github.com/ranaroussi/yfinance"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "yfinance.version.VERSION" }

[tool.setuptools.packages.find]
exclude = ["contrib*", "docs*", "tests*", "examples*"]

[tool.setuptools.package-data]
"yfinance.ws" = ["pricing.proto", "pricing.py"]
